fix(table-compare): fix feature label overflow

--- a/src/js/components/organisms/table-compare/table-compare.scss
+++ b/src/js/components/organisms/table-compare/table-compare.scss
@@ -124,7 +124,8 @@
     display: block;
 
 }
-.table-compare__feature {
+.table-compare__feature,
+.table-compare__feature--no-tooltip {
     display: inline-block;
     position: relative;
     vertical-align: top;
